Fix layout bug on mobile

--- a/assets/less/courses.less
+++ b/assets/less/courses.less
@@ -88,15 +88,3 @@ h2 {
     /* Position */
     margin-top: 5em;
 }
-
-
-/* Mobile */
-@media @phone {
-    .main {
-        font-size: 2em;
-    }
-
-    h1, h2 {
-        font-size: 1.7em;
-    }
-}
