--- a/assets/less/decks.less
+++ b/assets/less/decks.less
@@ -73,14 +73,3 @@ h2 {
         }
     }
 }
-
-/* Mobile */
-@media @phone {
-    .main {
-        font-size: 2em;
-    }
-
-    h1, h2 {
-        font-size: 1.7em;
-    }
-}
