--- a/assets/less/home.less
+++ b/assets/less/home.less
@@ -317,7 +317,7 @@
             display: block;
 
             /* Decrease top margin */
-            margin-top: -2em;
+            margin-top: -1em;
 
             .buttons {
                 /* Decrease top margin */
