--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -341,4 +341,15 @@ h6 {
             padding-left: 1em;
         }
     }
+
+    /* Increase font size */
+    .main {
+        font-size: 2em;
+
+        /* Adjust position based on new font sizes */
+        top: calc(@topbar-height / 2 * 1.4);
+    }
+    h1, h2 {
+        font-size: 1.7em;
+    }
 }
