--- a/assets/less/resources.less
+++ b/assets/less/resources.less
@@ -30,14 +30,6 @@
 
 /* Mobile */
 @media @phone {
-    /* Increase font size */
-    .main {
-        font-size: 2em;
-    }
-    h1, h2 {
-        font-size: 1.7em;
-    }
-
     .body {
         .resource-category {
             /* Reset display */
